# cmake-win11-opencl-java

./: CMakeLists.txt  README.md
CMakeProject1/: CMakeLists.txt  CMakeProject1.cpp  CMakeProject1.h
